Update Resume / Fix contrast

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,10 +6,10 @@ body {
   --color-accent-hover: #515151;
   --color-neutral-dark-100: #201f1f;
   --color-neutral-dark-200: #333;
-  --color-neutral-grey-100: #807e7b;
+  --color-neutral-grey-100: #74716d;
   --color-neutral-grey-200: #9a9999;
   --color-neutral-light: #f9faf4;
-  --color-star: #ed4b4f;
+  --color-star: #c34042;
   --color-star-light: #af6b62;
   --color-star-light-hover: #c7989b;
 
@@ -20,7 +20,7 @@ body {
   --color-border-variant: var(--color-neutral-light);
   --color-headline: var(--color-star);
   --color-headline-variant: var(--color-star-light);
-  --color-highlighted: var(--color-neutral-dark-200);
+  --color-highlighted: var(--color-neutral-dark-100);
   --color-highlighted-variant: var(--color-neutral-light);
   --color-icon: var(--color-neutral-dark-200);
   --color-icon-variant: var(--color-neutral-light);
